src/objects/Monitoring_Plan__c.object
<CustomObject>
    <description>Grant Monitoring</description>
    <fields>
        <fullName>Grant_Monitoring__c</fullName>
        <label>Grant Monitoring</label>
        <referenceTo>Grant_Monitoring__c</referenceTo>
        <relationshipName>Monitoring_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Initiating_Office__c</fullName>
        <label>Initiating Office</label>
        <picklist>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint - Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint - Financial</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Fiscal_Year__c</fullName>
        <label>Monitoring Fiscal Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Monitoring_Activity_Count__c</fullName>
        <description>Counts the number of open monitoring activities.</description>
        <label>Open Monitoring Activity Count</label>
        <summarizedField>Monitoring_Activity__c.Activity_Complete__c</summarizedField>
        <summaryForeignKey>Monitoring_Activity__c.Monitoring_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned_Monitoring_Activity__c</fullName>
        <label>Planned Monitoring Activity</label>
        <picklist>
            <picklistValues>
                <fullName>On-Site Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Training/Technical Assistance (T/TA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted/Issue-based Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawdown Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Visit – Programmatic &amp; Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Visit – Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Standards review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Plan In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Month__c</fullName>
        <label>Target Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Monitoring Plan Record ID</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Monitoring Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitoring Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Monitoring_Fiscal_Year</fullName>
        <active>true</active>
        <description>Requires 4 characters in the Monitoring Fiscal Year field.</description>
        <errorConditionFormula>LEN(TRIM( Monitoring_Fiscal_Year__c ))&lt;4</errorConditionFormula>
        <errorDisplayField>Monitoring_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Enter a 4 digit year (i.e. 2015)</errorMessage>
    </validationRules>
</CustomObject>